Adds sidebar and navigation guide

--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -145,25 +145,62 @@ var ldp_year = "`r last_full_year`";
 
 </script>
 
+```{r glossary calculations}
+ldp <- read_rds(get_mi_data_path("ldp_data", ext = "rds", test_output = test_output))
+
+total_age_known <- ldp %>% filter(age_grp != "Unknown") %>% nrow()
+age_65_plus <-ldp %>% filter(age >= 65) %>% nrow()
+
+perc_65_plus <- round(age_65_plus/total_age_known*100,1)
+
+age_unknown <- ldp %>% filter(age_grp == "Unknown") %>% nrow()
+sex_unknown <- ldp %>% filter(sex %in% c("98 Not Specified", "99 Not Known")) %>% nrow()
+simd_unknown <- ldp %>% filter(simd == "Unknown") %>% nrow()
+```
+
 Home
 =================================================
+Sidebar - about this report {.sidebar}
+-----------------------------------------------------------------------
+
+<br>
+
+### About This Report
+#### PDS Quarterly, `r paste0(current_fy, " Q", qt)`
+##### Data as at `r paste(format(end_date, '%d %B %Y'))` 
+
+***
+<span style = "font-size: 20px;">**FURTHER INFORMATION:**</span>
+
+<ul style="list-style-type:square;">
+  <li style="font-size: 20px;">[**About This Report**](#home)</li>
+  <li style="font-size: 20px;">[Methodology](#methodology)</li>
+  <li style="font-size: 20px;">[Glossary](#glossary)</li>
+  <li style="font-size: 20px;">[Navigation Guide](#navigation-guide)</li>
+</ul>
+
+***
+
+Please get in touch with any comments, suggestions and feedback: [phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot)
 
 Row
 -------------------------------------------------
 
-### **About This Report**
+### <!-- No Title -->
 
 This report has been produced by Public Health Scotland (PHS) and contains analysis of performance against the [Scottish Government's LDP Standard](https://www.gov.scot/About/Performance/scotPerforms/NHSScotlandperformance/Dementia-LDP){target="_blank"} on provision of Dementia Post Diagnostic Support (PDS).
 
 <span style="color:red"> **The information contained in this report is for management information only and should not be distributed widely.** </span>
 
-These reports reflect the [Dementia PDS dataset](https://publichealthscotland.scot/media/20921/2023-12-14-dementia-pds-definitions-and-recording-guidance-v14.pdf){target="_blank"} effective 01 April 2019 and contain data for individuals diagnosed with dementia between **`r format(dmy(01042016), "%d %B %Y")`** and **`r format(end_date, "%d %B %Y")`** who were referred for post diagnostic support.
+These reports reflect the revised [Dementia PDS dataset](https://publichealthscotland.scot/media/20921/2023-12-14-dementia-pds-definitions-and-recording-guidance-v14.pdf){target="_blank"} effective 01 April 2019 and contain data for individuals diagnosed with dementia between **`r format(dmy(01042016), "%d %B %Y")`** and **`r format(end_date, "%d %B %Y")`** who were referred for post diagnostic support.
 
-Data are submitted to PHS by health boards on a quarterly basis. Each health board provides updated information for all individuals referred for post diagnostic support with a diagnosis date from `r format(start_date, "%d %B %Y")` onwards. Therefore, data for diagnoses from this date onwards are refreshed in each management report and are based on the most recently submitted data. 
+Data are submitted to PHS by health boards on a quarterly basis. Each health board provides updated information for all individuals referred for post diagnostic support with a diagnosis date from `r format(ymd(paste0(substr(provisional_year, 1,4), "-04-01")), "%d %B %Y")` onwards. Therefore, data for diagnoses from this date onwards are refreshed in each management report and are based on the most recently submitted data. Data for diagnoses prior to `r format(ymd(paste0(substr(provisional_year, 1,4), "-04-01")), "%d %B %Y")` are now final and will not change in future versions of the report. 
 
 Information is shown at Scotland, Health Board and Integration Authority Area level using the drop down menus at the top of the page.
 
 For definitions of terms used throughout the report see the [Glossary](#glossary) page.
+
+For information on how to navigate the report and use its features see the [Navigation Guide](#navigation-guide).
  
 To ensure these reports are as useful as possible, we would welcome any comments or feedback you may have via the PHS Dementia PDS team mailbox at: [phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot).
 
@@ -211,51 +248,34 @@ Row
 
 **Please note:** In December 2016, the Scottish Government published a report: [2014-2020 Estimated and Projected Diagnosis Rates for Dementia in Scotland](https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/){target="_blank"}. For financial years *2021/22*, *2022/23* and *2023/24*, the rates referenced in the report were used to create national, age specific rates of dementia incidence per 1,000 population which were then applied to the National Records of Scotland (NRS) Mid-2021 Population Estimates to obtain the incidence estimates.
 
-<!-- Scotland -->
-
-```{r scotland, include=FALSE}
-
-scotland <- map(.x = sort(unique(pds$fy)),
-                .f = ~ set_env(data = pds,
-                               exp  = exp,
-                               hb   = "Scotland",
-                               year = .x,
-                               quarter = qt))
-
-```
-
-`r paste(knitr::knit_child(text = scotland), collapse = '')`
 
 
-<!-- HEALTH BOARDS -->
 
-```{r health-boards, include=FALSE}
-
-health_boards <- pmap(expand.grid(sort(unique(pds$fy)),
-                                  sort(unique(pds$health_board))), 
-                      .f = ~ set_env(data = pds,
-                                     exp  = exp,
-                                     hb   = .y,
-                                     year = .x,
-                                     quarter = qt))
-
-```
-
-`r paste(knitr::knit_child(text = health_boards), collapse = '')`
-
-
-<!-- TOTAL REFERRALS - TRENDS & RATES -->
-`r knitr::knit_child("subpage-trends.Rmd")`
-
-<!-- DEMOGRAPHICS -->
-`r knitr::knit_child("subpage-demographics.Rmd")`
-
-<!-- PATHWAYS -->
-`r knitr::knit_child("subpage-pathways.Rmd")`
-
-
-Methodology 
+Methodology {.hidden}
 =================================================
+Sidebar - methodology {.sidebar}
+-----------------------------------------------------------------------
+
+<br>
+
+### Methodology
+#### PDS Quarterly, `r paste0(current_fy, " Q", qt)`
+##### Data as at `r paste(format(end_date, '%d %B %Y'))` 
+
+***
+<span style = "font-size: 20px;">**FURTHER INFORMATION:**</span>
+
+<ul style="list-style-type:square;">
+  <li style="font-size: 20px;">[About This Report](#home)</li>
+  <li style="font-size: 20px;">[**Methodology**](#methodology)</li>
+  <li style="font-size: 20px;">[Glossary](#glossary)</li>
+  <li style="font-size: 20px;">[Navigation Guide](#navigation-guide)</li>
+</ul>
+
+***
+
+Please get in touch with any comments, suggestions and feedback: [phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot)
+
 
 Row
 -------------------------------------------------
@@ -335,8 +355,233 @@ There also exists a Service Level Agreement between NHS Highland and NHS Greater
 If you have any queries regarding the above, please contact [phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot).
 
 
-Queries/Errors {data-navmenu="Data Quality"}
+Glossary {.hidden}
 =================================================
+Sidebar - glossary {.sidebar}
+-----------------------------------------------------------------------
+
+<br>
+
+### Glossary
+#### PDS Quarterly, `r paste0(current_fy, " Q", qt)`
+##### Data as at `r paste(format(end_date, '%d %B %Y'))` 
+
+***
+<span style = "font-size: 20px;">**FURTHER INFORMATION:**</span>
+
+<ul style="list-style-type:square;">
+  <li style="font-size: 20px;">[About This Report](#home)</li>
+  <li style="font-size: 20px;">[Methodology](#methodology)</li>
+  <li style="font-size: 20px;">[**Glossary**](#glossary)</li>
+  <li style="font-size: 20px;">[Navigation Guide](#navigation-guide)</li>
+</ul>
+
+***
+
+Please get in touch with any comments, suggestions and feedback: [phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot)
+
+Row
+-------------------------------------------------
+
+###
+
+#### General Information
+
+**Post Diagnostic Support (PDS):** Support commissioned by the Scottish Government that everyone newly diagnosed with dementia is entitled to a minimum of one year’s post-diagnostic support. Further information on post-diagnostic support can be found on the [Alzheimer Scotland](https://www.alzscot.org/pds){target="_blank"} website. 
+
+**Referral:** When a person receives a new diagnosis of dementia, a referral is made to a service that provides post-diagnostic support and allocates a named person to work alongside the individual and those close to them.
+
+**Health Board:** This is the Health Board of the PDS Practitioner or Team providing care and support to the service user. 
+
+**Integration Authority Area (IAA):** This is the IAA of the PDS Practitioner or Team providing care and support to the service user. 
+
+**Population Estimates:** The population estimates used in this report are from the National Records of Scotland (NRS) Mid-year population estimates and the NRS Population estimates by Scottish Index of Multiple Deprivation (SIMD). As figures in this report are by financial year, the estimate for the calendar year with the majority of months in the selected financial year is used. For example, analysis for financial year 2018/19 uses estimates for the calendar year 2018. The estimates used throughout the report are for the population that is 65 years and older, as `r perc_65_plus`% of referrals to PDS are in this age group. 
+
+NRS Mid-year population estimates can be found using the links below: 
+
+[Population, migration and households - National Records of Scotland (NRS)](https://www.nrscotland.gov.uk/statistics-and-data/population-migration-and-households){target="_blank"}
+
+[Population estimates by Scottish Index of Multiple Deprivation (SIMD) - National Records of Scotland (NRS)](https://www.nrscotland.gov.uk/publications/population-estimates-by-scottish-index-of-multiple-deprivation-simd/){target="_blank"}
+
+***
+
+#### Demographics
+
+**Age Group:** Age is calculated as at the dementia diagnosis date. 
+
+Across the reported years there are a small number of records (`r age_unknown` in total) with an incomplete date of birth and therefore the age group is unknown. These records have been excluded from the age group analysis. 
+
+*For the rates calculations, for financial year 2024/25 the Mid-2023 populations are used as this is the latest available estimate.*  <!-- UPDATE when new population estimates are available -->
+
+**Gender:** Gender is based on the sex recorded for each referral.  
+
+Across the reported years there are `r sex_unknown` records in total where sex is either not specified (includes refused/not provided) or not known (i.e. indeterminate sex, includes ‘Intersex’). These records have been excluded from the gender analysis.
+
+*For the rates calculations, for financial year 2024/25 the Mid-2023 populations are used as this is the latest available estimate.*  <!-- UPDATE when new population estimates are available -->
+
+**Deprivation:** Deprivation is calculated by matching postcodes grouped into small geographical areas known as datazones to the Scottish Index of Multiple Deprivation (SIMD) quintiles. SIMD has seven domains (income, employment, education, housing, health, crime, and geographical access) at data zone level, which have been combined into an overall index to pick out area concentrations of multiple deprivation. Each deprivation quintile indicates the level of deprivation using a scale of 1 (most deprived quintile) to 5 (least deprived quintile). At Scotland level, approximately one fifth of the general population are within each deprivation quintile. The quintiles used in this report are from SIMD 2020v2. Further information on SIMD can be found on the [Scottish Government](https://www.gov.scot/collections/scottish-index-of-multiple-deprivation-2020/){target="_blank"} website.
+
+Across the reported years there are `r simd_unknown` records where it was not possible to assign a deprivation category. Possible reasons for not being able to assign a deprivation category are that no postcode was provided or the postcode provided is invalid, not in Scotland, or is a newly added postcode. These records have been excluded from the deprivation analysis.
+
+*For the rates calculations, for financial years 2023/24 and 2024/25 the Mid-2022 populations are used as this is the latest available estimate.*  <!-- UPDATE when new population estimates are available -->
+
+***
+
+#### Pathways
+
+**Dementia Diagnosis Date:** The date on which the service user receives a confirmed diagnosis of dementia. This diagnosis must be confirmed by a doctor or clinical practitioner with sufficient training and experience in the diagnosis of dementia. 
+
+**First Contact:** The date on which an appropriate face to face direct contact took place with the service user by the PDS Practitioner or PDS Team with the knowledge and skills to introduce each model of care. Direct contact can be done in person or by video link and is not restricted to both parties being in the same room. 
+
+**Not Contacted / No Contact:** No date of first contact has been recorded/reported in the PDS submission. 
+
+**Date of Allocation of PDS Practitioner:** The date on which the service user is allocated to the initial PDS Practitioner or PDS Team.
+
+**PDS Terminated / Ended:** PDS is deemed to be at end when a PDS termination date is recorded. The PDS termination date is defined as the date when the PDS was terminated or when the service user was transitioned to a further model of care. 
+
+**Uptake Decision:** The decision	made by the service user whether to uptake their entitlement to receive PDS.
+
+**Average (Median) Days:** The midpoint of the number of days between the given dates for each referral, such that there is an even number of values falling above and below it. The median number of days for each time period will be such that half of the people will have experienced a wait time this long or longer.
+
+***
+
+#### Additional Definitions
+
+**Accommodation Type:** The type of accommodation of the service user’s main residence. 
+
+**Carer’s Support:** Indicates whether ongoing PDS work is carried out in conjunction with the family/carer even if the service user refuses/declines to work with the PDS Practitioner following diagnosis. The work with the carer is directly linked to the eligibility of the person with dementia for PDS.
+
+**Subtype of Dementia:** The subtype of dementia that a service user has been principally diagnosed with. This diagnosis must be made by a doctor or clinical practitioner with sufficient training and experience in the diagnosis of dementia. 
+
+**Clinical Impression of Stage of Illness:** Clinical Impression of Stage of Illness at referral is broadly used to outline the typical symptoms and degree of difficulties associated with dementia disease progression, and the impact on the person with dementia and their carers. 
+
+**Model of Care:** The model of care deemed most appropriate for the service user following their diagnosis. 
+
+
+Navigation Guide {.hidden}
+=================================================
+Sidebar - navigation guide {.sidebar}
+-----------------------------------------------------------------------
+
+<br>
+
+### Navigation Guide
+#### PDS Quarterly, `r paste0(current_fy, " Q", qt)`
+##### Data as at `r paste(format(end_date, '%d %B %Y'))` 
+
+***
+<span style = "font-size: 20px;">**FURTHER INFORMATION:**</span>
+
+<ul style="list-style-type:square;">
+  <li style="font-size: 20px;">[About This Report](#home)</li>
+  <li style="font-size: 20px;">[Methodology](#methodology)</li>
+  <li style="font-size: 20px;">[Glossary](#glossary)</li>
+  <li style="font-size: 20px;">[**Navigation Guide**](#navigation-guide)</li>
+</ul>
+
+***
+
+Please get in touch with any comments, suggestions and feedback: [phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot)
+
+Row
+-------------------------------------------------
+
+### <!-- No Title -->
+
+Below is an example page from the report with annotations describing common features that can be found on most pages. A link to this guide is available in the sidebar of each page.
+
+Row {data-height=730}
+-------------------------------------------------
+
+### <!-- No Title -->
+
+```{r}
+bscols(widths = 12, 
+       div(style = css(width="97%", marginLeft="20px"),
+       img(style = css(width="100%"), src="navigation-guide.png")))
+
+```
+
+<!-- Scotland -->
+
+```{r scotland, include=FALSE}
+
+scotland <- map(.x = sort(unique(pds$fy)),
+                .f = ~ set_env(data = pds,
+                               exp  = exp,
+                               hb   = "Scotland",
+                               year = .x,
+                               quarter = qt))
+
+```
+
+`r paste(knitr::knit_child(text = scotland), collapse = '')`
+
+
+<!-- HEALTH BOARDS -->
+
+```{r health-boards, include=FALSE}
+
+health_boards <- pmap(expand.grid(sort(unique(pds$fy)),
+                                  sort(unique(pds$health_board))), 
+                      .f = ~ set_env(data = pds,
+                                     exp  = exp,
+                                     hb   = .y,
+                                     year = .x,
+                                     quarter = qt))
+
+```
+
+`r paste(knitr::knit_child(text = health_boards), collapse = '')`
+
+
+<!-- TOTAL REFERRALS - TRENDS & RATES -->
+`r knitr::knit_child("subpage-trends.Rmd")`
+
+<!-- DEMOGRAPHICS -->
+`r knitr::knit_child("subpage-demographics.Rmd")`
+
+<!-- PATHWAYS -->
+`r knitr::knit_child("subpage-pathways.Rmd")`
+
+Data Quality
+=================================================
+
+Sidebar-queries/errors {.sidebar}
+-----------------------------------------------------------------------
+
+<br>
+
+### Queries/Errors
+
+***
+
+<font size="2"> 
+<span style="color:red"> 
+**MANAGEMENT INFORMATION ONLY:** <br>
+**NOT FOR ONWARD DISTRIBUTION**
+</span> </font>
+
+***
+
+<ul>
+  <li>[**Queries/Errors**](#data-quality)</li>
+  <li>[Number of Records Submitted](#records)</li>
+  <li>[Data Completion](#completion)</li>
+</ul>
+
+***
+
+**FURTHER INFORMATION:**
+
+<ul style="list-style-type:square;">
+   <li >[Glossary](#glossary)</li>
+   <li >[Navigation Guide](#navigation-guide)</li>
+</ul>
+
+***
+
+Please get in touch with any comments, suggestions and feedback: [phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot)
 
 Row
 -------------------------------------------------
@@ -382,8 +627,44 @@ err %>%
 ```
 
 
-Number of Records Submitted {data-navmenu="Data Quality"}
+Records {.hidden}
 =================================================
+
+Sidebar-records {.sidebar}
+-----------------------------------------------------------------------
+
+<br>
+
+### Number of Records Submitted
+
+***
+
+<font size="2"> 
+<span style="color:red"> 
+**MANAGEMENT INFORMATION ONLY:** <br>
+**NOT FOR ONWARD DISTRIBUTION**
+</span> </font>
+
+***
+
+<ul>
+  <li>[Queries/Errors](#data-quality)</li>
+  <li>[**Number of Records Submitted**](#records)</li>
+  <li>[Data Completion](#completion)</li>
+</ul>
+
+***
+
+**FURTHER INFORMATION:**
+
+<ul style="list-style-type:square;">
+   <li >[Glossary](#glossary)</li>
+   <li >[Navigation Guide](#navigation-guide)</li>
+</ul>
+
+***
+
+Please get in touch with any comments, suggestions and feedback: [phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot)
 
 Row
 -------------------------------------------------
@@ -424,8 +705,45 @@ err %>%
   scroll_box(height = "740px")
 ```
 
-Data Completion {data-navmenu="Data Quality"}
+Completion {.hidden}
 =================================================
+
+Sidebar-completion {.sidebar}
+-----------------------------------------------------------------------
+
+<br>
+
+### Data Completion
+
+***
+
+<font size="2"> 
+<span style="color:red"> 
+**MANAGEMENT INFORMATION ONLY:** <br>
+**NOT FOR ONWARD DISTRIBUTION**
+</span> </font>
+
+***
+
+<ul>
+  <li>[Queries/Errors](#data-quality)</li>
+  <li>[Number of Records Submitted](#records)</li>
+  <li>[**Data Completion**](#completion)</li>
+</ul>
+
+***
+
+**FURTHER INFORMATION:**
+
+<ul style="list-style-type:square;">
+   <li >[Glossary](#glossary)</li>
+   <li >[Navigation Guide](#navigation-guide)</li>
+</ul>
+
+***
+
+Please get in touch with any comments, suggestions and feedback: [phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot)
+
 
 Row
 -------------------------------------------------
@@ -672,86 +990,6 @@ bscols(widths = 12,
        )
 
 ```
-
-Glossary
-=================================================
-
-Row
--------------------------------------------------
-
-###
-
-#### General Information
-
-**Post Diagnostic Support (PDS):** Support commissioned by the Scottish Government that everyone newly diagnosed with dementia is entitled to a minimum of one year’s post-diagnostic support. Further information on post-diagnostic support can be found on the [Alzheimer Scotland](https://www.alzscot.org/pds){target="_blank"} website. 
-
-**Referral:** When a person receives a new diagnosis of dementia, a referral is made to a service that provides post-diagnostic support and allocates a named person to work alongside the individual and those close to them.
-
-**Health Board:** This is the Health Board of the PDS Practitioner or Team providing care and support to the service user. 
-
-**Integration Authority Area (IAA):** This is the IAA of the PDS Practitioner or Team providing care and support to the service user. 
-
-**Population Estimates:** The population estimates used in this report are from the National Records of Scotland (NRS) Mid-year population estimates and the NRS Population estimates by Scottish Index of Multiple Deprivation (SIMD). As figures in this report are by financial year, the estimate for the calendar year with the majority of months in the selected financial year is used. For example, analysis for financial year 2018/19 uses estimations for the calendar year 2018. The estimates used throughout the report are for the population that is 65 years and older, as 97.4% of referrals to PDS are in this age group. 
-
-NRS Mid-year population estimates can be found using the links below: 
-
-[Population, migration and households - National Records of Scotland (NRS)](https://www.nrscotland.gov.uk/statistics-and-data/population-migration-and-households){target="_blank"}
-
-[Population estimates by Scottish Index of Multiple Deprivation (SIMD) - National Records of Scotland (NRS)](https://www.nrscotland.gov.uk/publications/population-estimates-by-scottish-index-of-multiple-deprivation-simd/){target="_blank"}
-
-***
-
-#### Demographics
-
-**Age Group:** Age is calculated as at the dementia diagnosis date. 
-
-Across the reported years there are a small number of records (12 in total) with an incomplete date of birth and therefore the age group is unknown. These records have been excluded from the age group analysis. 
-
-*For the rates calculations, for financial year 2024/25 the Mid-2023 populations are used as this is the latest available estimate.*  
-
-**Gender:** Gender is based on the sex recorded for each referral.  
-
-Across the reported years there are 33 records in total where sex is either not specified (includes refused/not provided) or not known (i.e. indeterminate sex, includes ‘Intersex’). These records have been excluded from the gender analysis.
-
-*For the rates calculations, for financial year 2024/25 the Mid-2023 populations are used as this is the latest available estimate.*
-
-**Deprivation:** Deprivation is calculated by matching postcodes grouped into small geographical areas known as datazones to the Scottish Index of Multiple Deprivation (SIMD) quintiles. SIMD has seven domains (income, employment, education, housing, health, crime, and geographical access) at data zone level, which have been combined into an overall index to pick out area concentrations of multiple deprivation. Each deprivation quintile indicates the level of deprivation using a scale of 1 (most deprived quintile) to 5 (least deprived quintile). At Scotland level, approximately one fifth of the general population are within each deprivation quintile. The quintiles used in this report are from SIMD 2020v2. Further information on SIMD can be found on the [Scottish Government](https://www.gov.scot/collections/scottish-index-of-multiple-deprivation-2020/) website.
-
-Across the reported years there are 56 records where it was not possible to assign a deprivation quintile based on the postcode information available. These records have been excluded from the deprivation analysis. 
-
-*For the rates calculations, for financial years 2023/24 and 2024/25 the Mid-2022 populations are used as this is the latest available estimate.* 
-
-***
-
-#### Pathways
-
-**Dementia Diagnosis Date:** The date on which the service user receives a confirmed diagnosis of dementia. This diagnosis must be confirmed by a doctor or clinical practitioner with sufficient training and experience in the diagnosis of dementia. 
-
-**First Contact:** The date on which an appropriate face to face direct contact took place with the service user by the PDS Practitioner or PDS Team with the knowledge and skills to introduce each model of care. Direct contact can be done in person or by video link and is not restricted to both parties being in the same room. 
-
-**Not Contacted / No Contact:** No date of first contact has been recorded/reported in the PDS submission. 
-
-**Date of Allocation of PDS Practitioner:** The date on which the service user is allocated to the initial PDS Practitioner or PDS Team.
-
-**PDS Terminated / Ended:** PDS is deemed to be at end when a PDS termination date is recorded. The PDS termination date is defined as the date when the PDS was terminated or when the service user was transitioned to a further model of care. 
-
-**Uptake Decision:** The decision	made by the service user whether to uptake their entitlement to receive PDS.
-
-**Average (Median) Days:** The midpoint of the number of days between the given dates for each referral, such that there is an even number of values falling above and below it. The median number of days for each time period will be such that half of the people will have experienced a wait time this long or longer.
-
-***
-
-#### Further Information
-
-**Accommodation Type:** The type of accommodation of the service user’s main residence. 
-
-**Carer’s Support:** Indicates whether ongoing PDS work is carried out in conjunction with the family/carer even if the service user refuses/declines to work with the PDS Practitioner following diagnosis. The work with the carer is directly linked to the eligibility of the person with dementia for PDS.
-
-**Subtype of Dementia:** The subtype of dementia that a service user has been principally diagnosed with. This diagnosis must be made by a doctor or clinical practitioner with sufficient training and experience in the diagnosis of dementia. 
-
-**Clinical Impression of Stage of Illness:** Clinical Impression of Stage of Illness at referral is broadly used to outline the typical symptoms and degree of difficulties associated with dementia disease progression, and the impact on the person with dementia and their carers. 
-
-**Model of Care:** The model of care deemed most appropriate for the service user following their diagnosis. 
 
 ```{js }
 
