--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -196,7 +196,7 @@ These reports reflect the revised [Dementia PDS dataset](https://publichealthsco
 
 Data are submitted to PHS by health boards on a quarterly basis. Each health board provides updated information for all individuals referred for post diagnostic support with a diagnosis date from `r format(ymd(paste0(substr(provisional_year, 1,4), "-04-01")), "%d %B %Y")` onwards. Therefore, data for diagnoses from this date onwards are refreshed in each management report and are based on the most recently submitted data. Data for diagnoses prior to `r format(ymd(paste0(substr(provisional_year, 1,4), "-04-01")), "%d %B %Y")` are now final and will not change in future versions of the report. 
 
-Information is shown at Scotland, Health Board and Integration Authority Area level using the drop down menus at the top of the page.
+Information is shown at Scotland, Health Board and Integration Authority Area level using the links and dropdown menus at the top of the page.
 
 For definitions of terms used throughout the report see the [Glossary](#glossary) page.
 
